--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>디자인코코</title>
-    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/index.css">
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <title>디자인코코</title>
 </head>
-<body>
 
+<body>
     <div id="wrap">
         <header id="header">
             <div class="top_menu">
@@ -20,7 +24,7 @@
                 </div>
             </div>
             <div class="row">
-                <h1><a href="/index.html"></a><img src="img/logo.png" alt="기업로고"></h1>
+                <h1><a href="/index.html"><img src="img/logo.png" alt="디자인코코"></a></h1>
                 <nav id="nav">
                     <ul class="depth1 cf">
                         <li>
@@ -72,8 +76,8 @@
         </header>
         <section id="section">
             <article class="article1">
-                <div class="slide">
-                    <div class="slide1">
+                <div class="slide_group">
+                    <div class="slide slide1">
                         <div class="slide_text">
                             <h2>WE ARE CREATIVE</h2>
                             <p>당신과 함께하는 좋은 파트너가 되고 싶습니다.<br>
@@ -81,7 +85,7 @@
                             <a href="#none">바로가기</a>
                         </div>
                     </div>
-                    <div class="slide2">
+                    <div class="slide slide2">
                         <div class="slide_text">
                             <h2>자연에 가치를 더하다</h2>
                             <p>당신과 함께하는 좋은 파트너가 되고 싶습니다.<br>
@@ -89,7 +93,7 @@
                             <a href="#none">바로가기</a>
                         </div>
                     </div>
-                    <div class="slide3">
+                    <div class="slide slide3">
                         <div class="slide_text">
                             <h2>기술과 경험의 융합, 미래를 위한 변화</h2>
                             <p>당신과 함께하는 좋은 파트너가 되고 싶습니다.<br>
@@ -142,39 +146,155 @@
             </article>
             <article class="article4 row">
                     <h2>Product</h2>
-                    <p>최고의 prestige와 공간가치를 창조하는 global partner, 건축물과 주변환경을 생각하는 개발 소비자의 품격있는 삶을 위한 주거문화 창달에 노력하고 있습니다. </p>
+                    <p>최고의 prestige와 공간가치를 창조하는 global partner, 건축물과 주변환경을 생각하는 개발 소비자의 품격있는 삶을 위한 주거문화 창달에 노력하고
+                        있습니다. </p>
                     <ul class="cf">
                         <li>
-                            <img src="img/2014214025_p01.jpg" alt="">
+                            <div>
+                                <img src="img/2014214025_p01.jpg" alt="">
+                                <div class="zoom">
+                                    <a href="#none"><i class="fas fa-search"></i></a>
+                                    <a href="./img/logo.png" download><i class="fas fa-download"></i></a>
+                                </div>
+                            </div>
                             <h4>제품08</h4>
                             <p>고객과의 약속을 최우선으로 생각하고, 양질의 서비스를 제공하고자 힘쓰며 경쟁력 있는 기업으로 도약하고..</p>
                         </li>
                         <li>
-                            <img src="img/318183899_p02.jpg" alt="">
+                            <div>
+                                <img src="img/318183899_p02.jpg" alt="">
+                                <div class="zoom"><i class="fas fa-search"></i></div>
+                            </div>
                             <h4>제품07</h4>
                             <p>고객과의 약속을 최우선으로 생각하고, 양질의 서비스를 제공하고자 힘쓰며 경쟁력 있는 기업으로 도약하고..</p>
                         </li>
                         <li>
-                            <img src="img/348716429_p03.jpg" alt="">
+                           <div>
+                               <img src="img/348716429_p03.jpg" alt="">
+                               <div class="zoom"><i class="fas fa-search"></i></div>
+                            </div>
                             <h4>제품06</h4>
                             <p>고객과의 약속을 최우선으로 생각하고, 양질의 서비스를 제공하고자 힘쓰며 경쟁력 있는 기업으로 도약하고..</p>
                         </li>
                         <li>
-                            <img src="img/1264802078_p04.jpg" alt="">
+                            <div>
+                                <img src="img/1264802078_p04.jpg" alt="">
+                                <div class="zoom"><i class="fas fa-search"></i></div>
+                            </div>
                             <h4>제품05</h4>
                             <p>고객과의 약속을 최우선으로 생각하고, 양질의 서비스를 제공하고자 힘쓰며 경쟁력 있는 기업으로 도약하고..</p>
                         </li>
                         <li>
-                            <img src="img/193592240_p05.jpg" alt="">
+                            <div>
+                                <img src="img/193592240_p05.jpg" alt="">
+                                <div class="zoom"><i class="fas fa-search"></i></div>
+                            </div>
                             <h4>제품04</h4>
                             <p>고객과의 약속을 최우선으로 생각하고, 양질의 서비스를 제공하고자 힘쓰며 경쟁력 있는 기업으로 도약하고..</p>
                         </li>
                         <li>
-                            <img src="img/56180477_p06.jpg" alt="">
+                            <div>
+                                <img src="img/56180477_p06.jpg" alt="">
+                                <div class="zoom"><i class="fas fa-search"></i></div>
+                            </div>
                             <h4>제품03</h4>
                             <p>고객과의 약속을 최우선으로 생각하고, 양질의 서비스를 제공하고자 힘쓰며 경쟁력 있는 기업으로 도약하고..</p>
                         </li>
                     </ul>
+            </article>
+            <article class="article5">
+                <div class="row">
+                    <div class="cs_board">
+                        <ul class="tabmenu">
+                            <li>공지사항</li>
+                            <li class="active">뉴스&amp;이벤트</li>
+                        </ul>
+                        <div class="contents">
+                            <div class="">
+                                <table>
+                                    <caption class="blind">공지사항</caption>
+                                    <colgroup>
+                                        <col>
+                                        <col>
+                                    </colgroup>
+                                    <tbody>
+                                        <tr>
+                                            <td>공지사항 테스트 글입니다.공지사항 테스트 글입니다.공지사항 테스트 글입니다.공지사항 테스트 글입니다.</td>
+                                            <td>2021-01-05</td>
+                                        </tr>
+                                        <tr>
+                                            <td>공지사항 테스트 글입니다.</td>
+                                            <td>2021-01-05</td>
+                                        </tr>
+                                        <tr>
+                                            <td>공지사항 테스트 글입니다.</td>
+                                            <td>2021-01-05</td>
+                                        </tr>
+                                        <tr>
+                                            <td>공지사항 테스트 글입니다.</td>
+                                            <td>2021-01-05</td>
+                                        </tr>
+                                        <tr>
+                                            <td>공지사항 테스트 글입니다.</td>
+                                            <td>2021-01-05</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                                <a href="#none" class="more">more1</a>
+                            </div>
+                            <div class="news active">
+                                <table>
+                                    <caption class="blind">뉴스이벤트</caption>
+                                    <colgroup>
+                                        <col>
+                                        <col>
+                                    </colgroup>
+                                    <tbody>
+                                        <tr>
+                                            <td>뉴스이벤트 테스트 글입니다.뉴스이벤트 테스트 글입니다.뉴스이벤트 테스트 글입니다.뉴스이벤트 테스트 글입니다.</td>
+                                            <td>2021-01-05</td>
+                                        </tr>
+                                        <tr>
+                                            <td>뉴스이벤트 테스트 글입니다.</td>
+                                            <td>2021-01-05</td>
+                                        </tr>
+                                        <tr>
+                                            <td>뉴스이벤트 테스트 글입니다.</td>
+                                            <td>2021-01-05</td>
+                                        </tr>
+                                        <tr>
+                                            <td>뉴스이벤트 테스트 글입니다.</td>
+                                            <td>2021-01-05</td>
+                                        </tr>
+                                        <tr>
+                                            <td>뉴스이벤트 테스트 글입니다.</td>
+                                            <td>2021-01-05</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                                <a href="#none" class="more">more2</a>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="cs_center">
+                        <h4>고객센터</h4>
+                        <div class="cs-box">
+                            <ul>
+                               <li class="tel_num"><i class="fas fa-phone"></i> <a href="tel:010-6838-1744">010-6838-1744</a></li>
+                               <li>상담시간 : 09:00-18:00</li>
+                               <li>점심시간 : 12:00-13:00 (주말, 공휴일 휴무)</li>
+                               <li class="cs-btn"><a href="#none" class="cs-btn">1:1문의하기</a> <a href="#none" target="_blank" class="cs-btn2">FAQ</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="cs_movie">
+                        <div class="tubewrap">
+                            <!-- 컨트롤러(controls=1), 음소거(mute=1), 자동재생(autoplay=1), 추천영상끄기(rel=0) -->
+                            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/7BeaT2LlAQ8?mute=1&amp;autoplay=1&amp;rel=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
             </article>
         </section>
         <footer id="footer">
@@ -201,5 +321,27 @@
             </div>
         </footer>
     </div>
+
+    <script>
+        $(".article1 .slide_group").slick({
+            autoplay: true, // 자동재생
+            autoplaySpeed: 3000, // 간격시간
+            dots: true, // 동그라미버튼
+            speed: 600, // 바뀌는시간(생략가능)
+            slidesToShow: 1, // 보여질슬라이드수(생략가능)
+            slidesToScroll: 1, // 이동슬라이드수(생략가능)
+            pauseOnHover: true, // 마우스오버시 멈춤여부(생략가능)
+            pauseOnDotsHover: true, // 동그라미번호버튼에 호버시 멈춤여부(생략가능)
+            pauseOnFocus: false, // 동그라미번호버튼 클릭시 자동실행 멈춤여부
+            cssEase: 'linear', // 속도함수(생략가능)
+            draggable: true, // 마우스드래그시 슬라이드 교체가능여부(생략가능)
+            fade: false, // 슬라이드가 수평으로 이동하지 않고, 제자리에서 사라지고 나타남(생략가능)
+            arrows: true, // 좌우화살표 사용여부(생략가능)
+            prevArrow: '<button class="prev"><i class="fas fa-angle-left"></i></button>',
+            nextArrow: '<button class="next"><i class="fas fa-angle-right"></i></button>',
+        })
+    </script>
+
 </body>
+
 </html>
